[package]
description = "utility to update remote and local systems"
edition = "2021"
homepage = "https://github.com/zyllian/pupdate"
license = "WTFPL"
name = "pupdate"
readme = "README.md"
repository = "https://github.com/zyllian/pupdate"
version = "0.1.0"

[dependencies]
clap = {version = "4", features = ["derive"]}
directories = "5"
eyre = "0.6"
indicatif = {version = "0.17", features = ["tokio"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
time = {version = "0.3", features = ["formatting"]}
tokio = {version = "1", features = ["full"]}
